--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa-morgan": "^0.3.0",
     "koa-mount": "^1.3.0",
     "koa-router": "^5.1.2",
+    "koa-session": "^4.8.1",
     "koa-static": "^1.4.9",
     "optimist": "^0.6.1",
     "tracer": "^0.8.0"
